--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Purple">#A020F0</color>
+    <color name="Blue">#0000FF</color>
+    <color name="Dark_Blue">#00008B</color>
 </resources>
